changes to implement jwt tokens, authentication
